<resources>
    <string name="app_name">Chat App</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="register_btn">Register</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="select_image">Select Image</string>
    <string name="back_to_registration">back to registration</string>
    <string name="login_btn">Login</string>
    <string name="new_message">New Message</string>
    <string name="sign_out">Sign Out</string>
    <string name="enter_message">Enter Message</string>
    <string name="send">Send</string>
</resources>
