<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_light"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/username_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edit_round"
        android:ems="10"
        android:hint="@string/username_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="16dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/email_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_btn"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/email_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_round"
        android:ems="10"
        android:hint="@string/email_hint"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/username_register"
        app:layout_constraintStart_toStartOf="@+id/username_register"
        app:layout_constraintTop_toBottomOf="@+id/username_register"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/password_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_round"
        android:ems="10"
        android:hint="@string/password_hint"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/email_register"
        app:layout_constraintStart_toStartOf="@+id/email_register"
        app:layout_constraintTop_toBottomOf="@+id/email_register"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_round"
        android:text="@string/register_btn"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/password_register"
        app:layout_constraintStart_toStartOf="@+id/password_register"
        app:layout_constraintTop_toBottomOf="@+id/password_register" />

    <TextView
        android:id="@+id/already_have_an_account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/already_have_an_account"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/register_btn"
        app:layout_constraintStart_toStartOf="@+id/register_btn"
        app:layout_constraintTop_toBottomOf="@+id/register_btn" />

    <Button
        android:id="@+id/image_btn"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/image_rounded"
        android:text="@string/select_image"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circular_image_view"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/image_btn"
        app:layout_constraintEnd_toEndOf="@+id/image_btn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/image_btn"
        app:layout_constraintTop_toTopOf="@+id/image_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>